# poc

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  WORKSPACE.bazel
bazel/: README.md
k8s/: README.md  fluentd-daemonset.yaml
src/: Dockerfile  README.md
src/agent/: AgentMain.go  BUILD.bazel  README.md
src/manager/: BUILD.bazel  README.md
src/tensorflow/: BUILD.bazel  bin.py  classificationExample.py
