load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["AgentMain.go"],
    importpath = "github.com/NascentCore/poc/src/agent",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_docker_docker//api/types:go_default_library",
        "@com_github_docker_docker//client:go_default_library",
    ],
)

go_binary(
    name = "agent",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
