load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@org_pubref_rules_protobuf//go:rules.bzl", "go_proto_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/NascentCore/poc/src/manager",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "manager",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "manager_image",
    binary = ":manager",
)


go_proto_library(
  name = "test_proto",
  protos = ["test.proto"],
  with_grpc = True,
  verbose = 1, # 0=no output, 1=show protoc command, 2+ more...
)
