load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/NascentCore/poc/src/manager",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "manager",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "manager_image",
    binary = ":manager",
)

proto_library(
    name = "test_proto",
    srcs = ["test.proto"],
)

go_proto_library(
    name = "go_test_proto",
    importpath = "src/manager/test",
    proto = ":test_proto",
)
